--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,15 +2,12 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.js",
+      "src": "pages/api/**/*.js",
       "use": "@vercel/node"
-    }
-  ],
-  "routes": [
+    },
     {
-      "src": "/(.*)",
-      "dest": "index.js"
+      "src": "pages/**/*.js",
+      "use": "@vercel/next"
     }
-  ],
-  "ws": true
+  ]
 }
